hphp/hack/test/typecheck/parse_error_loc_else.php.exp
File "parse_error_loc_else.php", line 22, characters 9-17:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
